--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     </div>
                     <div class="swiper" id="swiper1">
                         <div class="wrapper-img swiper-wrapper">
-                            <div class="hero-items__img swiper-slide"><img src="/img/main-img/image 10.png" alt=""></div>
-                            <div class="hero-items__img swiper-slide"><img src="/img/game-img/image 7.png" alt=""></div>
-                            <div class="hero-items__img swiper-slide"><img src="/img/game-img/mouse-game.png" alt=""></div>
+                            <div class="hero-items__img swiper-slide"><img src="./img/main-img/image 10.png" alt=""></div>
+                            <div class="hero-items__img swiper-slide"><img src="./img/game-img/image 7.png" alt=""></div>
+                            <div class="hero-items__img swiper-slide"><img src="./img/game-img/mouse-game.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -282,6 +282,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
