--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
                     <img src="./img/icons/logitechg-bottom 1.png" alt="mouse img">
                 </div>
                 <div class="catalog-item">
-                    <img src="./img/icons/ic-mouse.png" alt="mouse img">
+                    <img src="./img/icons/ic-mouse.png" alt="catalog icon">
                     <div>Mыши</div>
                 </div>
                 <div class="catalog-item">
-                    <img src="./img/icons/ic-keyboard.png" alt="mouse img">
+                    <img src="./img/icons/ic-keyboard.png" alt="catalog icon">
                     <div>Клавиатуры</div>
                 </div>
                 <div class="catalog-item">
-                    <img src="./img/icons/ic-webcamera.png" alt="mouse img">
+                    <img src="./img/icons/ic-webcamera.png" alt="catalog icon">
                     <div>Веб-камеры</div>
                 </div>
                 <div class="catalog-item">
-                    <img src="./img/icons/ic-headset.png" alt="mouse img">
+                    <img src="./img/icons/ic-headset.png" alt="catalog icon">
                     <div>Гарнитуры</div>
                 </div>
                 <div class="catalog-item">
-                    <img src="./img/icons/ic-gamepad.png" alt="mouse img">
+                    <img src="./img/icons/ic-gamepad.png" alt="catalog icon">
                     <div>Геймпады</div>
                 </div>
                 <div class="catalog-item">
-                    <img src="./img/icons/ic-acouctic.png" alt="mouse img">
+                    <img src="./img/icons/ic-acouctic.png" alt="catalog icon">
                     <div>Аккустика</div>
                 </div>
                 
@@ -53,9 +53,9 @@
                     </div>
                     <div class="swiper" id="swiper1">
                         <div class="wrapper-img swiper-wrapper">
-                            <div class="hero-items__img swiper-slide"><img src="./img/main-img/image 10.png" alt=""></div>
-                            <div class="hero-items__img swiper-slide"><img src="./img/game-img/image 7.png" alt=""></div>
-                            <div class="hero-items__img swiper-slide"><img src="./img/game-img/mouse-game.png" alt=""></div>
+                            <div class="hero-items__img swiper-slide"><img src="./img/main-img/image 10.png" alt="hero img"></div>
+                            <div class="hero-items__img swiper-slide"><img src="./img/game-img/image 7.png" alt="hero img"></div>
+                            <div class="hero-items__img swiper-slide"><img src="./img/game-img/mouse-game.png" alt="hero img"></div>
                         </div>
                     </div>
                 </div>
@@ -75,13 +75,13 @@
                     <div class="home-column-1">
                         <div class="card card1">
                             <div class="card-items">
-                                <img class="card-items__img" src="./img/home-office/keyboard.png" alt="">
+                                <img class="card-items__img" src="./img/home-office/keyboard.png" alt="for home image">
                                 <div class="card-items__text">Клавиатуры</div>
                             </div>
                         </div>
                         <div class="card card2">
                             <div class="card-items">
-                                <img class="card-items__img" src="./img/home-office/camera.png" alt="">
+                                <img class="card-items__img" src="./img/home-office/camera.png" alt="for home image">
                                 <div class="card-items__text">Веб-камеры</div>
                             </div>
                         </div>
@@ -89,13 +89,13 @@
                         <div class="home-column-2">
                             <div class="card card3">
                                 <div class="card-items">
-                                    <img class="card-items__img" src="./img/home-office/headphone.png" alt="">
+                                    <img class="card-items__img" src="./img/home-office/headphone.png" alt="for home image">
                                     <div class="card-items__text">Гарнитура</div>
                                 </div>
                             </div>
                             <div class="card card4">
                                <div class="card-items">
-                                    <img class="card-items__img" src="./img/home-office/sound.png" alt="">
+                                    <img class="card-items__img" src="./img/home-office/sound.png" alt="for home image">
                                     <div class="card-items__text">Аккустика</div>
                                 </div>
                             </div>
@@ -103,14 +103,14 @@
                         <div class="home-column-3">
                             <div class="card card5">
                                 <div class="card-items">
-                                    <img class="card-items__img" src="./img/home-office/conference.png" alt="">
+                                    <img class="card-items__img" src="./img/home-office/conference.png" alt="for home image">
                                     <div class="card-items__text">Оборудование
                                     для конференций</div>
                                 </div>
                             </div>
                             <div class="card card6">
                                 <div class="card-items">
-                                    <img class="card-items__img" src="./img/home-office/mouse.png" alt="">
+                                    <img class="card-items__img" src="./img/home-office/mouse.png" alt="for home image">
                                     <div class="card-items__text">Мыши</div>
                                 </div>
                             </div>
@@ -127,13 +127,13 @@
                         <div class="for-gaming-column-1">
                             <div class="game-card game-card1">
                                 <div class="card-items">
-                                    <img class="game-card-items__img" src="./img/game-img/naushnii.png" alt="">
+                                    <img class="game-card-items__img" src="./img/game-img/naushnii.png" alt="for game image">
                                     <div class="game-card-items__text">Игровые гарнитуры</div>
                                 </div>
                             </div>
                             <div class="game-card game-card2">
                                 <div class="game-card-items">
-                                    <img class="game-card-items__img" src="./img/game-img/mouse-game.png" alt="">
+                                    <img class="game-card-items__img" src="./img/game-img/mouse-game.png" alt="for game image">
                                     <div class="game-card-items__text">Игровые мыши</div>
                                 </div>
                             </div>
@@ -143,13 +143,13 @@
                             <div class="for-gaming-column-2">
                                 <div class="game-card game-card3">
                                     <div class="game-card-items">
-                                        <img class="game-card-items__img" src="./img/game-img/cover.png" alt="">
+                                        <img class="game-card-items__img" src="./img/game-img/cover.png" alt="for game image">
                                         <div class="game-card-items__text">Игровые коврики для мышек</div>
                                     </div>
                                 </div>
                                 <div class="game-card game-card4">
                                    <div class="game-card-items">
-                                        <img class="game-card-items__img" src="./img/game-img/image 5.png" alt="">
+                                        <img class="game-card-items__img" src="./img/game-img/image 5.png" alt="for game image">
                                         <div class="game-card-items__text">Геймпады</div>
                                     </div>
                                 </div>
@@ -157,7 +157,7 @@
                                
                                 <div class="game-card game-card5">
                                     <div class="game-card-items">
-                                        <img class="game-card-items__img" src="./img/game-img/image 7.png" alt="">
+                                        <img class="game-card-items__img" src="./img/game-img/image 7.png" alt="for game image">
                                         <div class="game-card-items__text">Игровые клавиатуры</div>
                                     </div>
                                 </div>
@@ -176,7 +176,7 @@
                         <div class="top-product-card swiper-slide">
                             <div class="card-item ">
                                 <div class="top-product-img">
-                                    <img src="./img/top-img/img.png" alt="">
+                                    <img src="./img/top-img/img.png" alt="top product image">
                                 </div>
                                 <div class="top-product-text"> БЕСПРОВОДНОЙ ГЕЙМПАД F710...
                                 </div>
@@ -185,7 +185,7 @@
                         <div class="top-product-card swiper-slide">
                             <div class="card-item">
                                 <div class="top-product-img">
-                                    <img src="./img/top-img/mousegame2.png" alt="">
+                                    <img src="./img/top-img/mousegame2.png" alt="top product image">
                                 </div>
                                 <div class="top-product-text">ВЫСОКОТОЧНАЯ ИГРОВАЯ МЫШЬ G5...</div>
                             </div>
@@ -193,7 +193,7 @@
                         <div class="top-product-card swiper-slide">
                             <div class="card-item">
                                 <div class="top-product-img">
-                                    <img src="./img/top-img/img1.png" alt="">
+                                    <img src="./img/top-img/img1.png" alt="top product image">
                                 </div>
                                 <div class="top-product-text">МЕХАНИЧЕСКАЯ ИГРОВАЯ КЛАВИАТУ...</div>
                             </div>
@@ -201,7 +201,7 @@
                         <div class="top-product-card swiper-slide">
                             <div class="card-item">
                                 <div class="top-product-img">
-                                    <img src="./img/top-img/img2.png" alt="">
+                                    <img src="./img/top-img/img2.png" alt="top product image">
                                 </div>
                                 <div class="top-product-text">БЕСПРОВОДНАЯ ГАРНИТУРА PRO X L...</div>
                             </div>
@@ -209,7 +209,7 @@
                         <div class="top-product-card card-margin swiper-slide">
                             <div class="card-item">
                                 <div class="top-product-img">
-                                    <img src="./img/top-img/cover2.png" alt="">
+                                    <img src="./img/top-img/cover2.png" alt="top product image">
                                 </div>
                                 <div class="top-product-text">КОВРИК ДЛЯ ИГРОВОЙ МЫШИ G8...</div>
                             </div>
@@ -235,7 +235,7 @@
                         <div class="article-card">
                             <div class="article-card-item swiper-slide">
                                 <div class="article-img">
-                                    <img src="./img/article-image/img99.png" alt="">
+                                    <img src="./img/article-image/img99.png" alt="article image">
                                 </div>
                                 <div class="article-text">Фитнес-трекер или смарт-часы: что выбрать
                                 </div>
@@ -244,7 +244,7 @@
                         <div class="article-card swiper-slide">
                             <div class="article-card-item">
                                 <div class="article-img">
-                                    <img src="./img/article-image/img6.png" alt="">
+                                    <img src="./img/article-image/img6.png" alt="article image">
                                 </div>
                                 <div class="article-text">Собираем игровой ПК
                                 до 35 000 грн</div>
@@ -253,7 +253,7 @@
                         <div class="article-card swiper-slide">
                             <div class="article-card-item">
                                 <div class="article-img">
-                                    <img src="./img/article-image/img67.png" alt="">
+                                    <img src="./img/article-image/img67.png" alt="article image">
                                 </div>
                                 <div class="article-text">Обзор Samsung Galaxy S20 FE: «фанатская»...</div>
                             </div>
@@ -261,7 +261,7 @@
                         <div class="article-card swiper-slide">
                             <div class="article-card-item">
                                 <div class="article-img">
-                                    <img src="./img/article-image/img88.png" alt="">
+                                    <img src="./img/article-image/img88.png" alt="article image">
                                 </div>
                                 <div class="article-text">Black Shark представила серию новых мо...</div>
                             </div>
@@ -269,7 +269,7 @@
                         <div class="article-card card-margin swiper-slide">
                             <div class="article-card-item">
                                 <div class="article-img">
-                                    <img src="./img/article-image/img99.png" alt="">
+                                    <img src="./img/article-image/img99.png" alt="article image">
                                 </div>
                                 <div class="article-text">Фитнес-трекер или смарт-часы: что выбрать</div>
                             </div>
