--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                        
                     </ul>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item catalog-item1">
                     <img src="./img/icons/ic-acouctic.png" alt="catalog icon">
                     <div>Аккустика</div>
                     <ul class="modal-list">
